--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.1.0",
-    "@strapi/plugin-users-permissions": "4.1.0",
     "@strapi/plugin-i18n": "4.1.0",
-    "pg": "8.6.0"
+    "@strapi/plugin-users-permissions": "4.1.0",
+    "@strapi/strapi": "4.1.0",
+    "pg": "8.6.0",
+    "strapi-plugin-entity-relationship-chart": "^4.0.2"
   },
   "author": {
     "name": "A Strapi developer"
