--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "description": "A Strapi application",
   "scripts": {
-    "develop": "strapi develop",
+    "develop": "strapi develop --watch-admin",
     "start": "strapi start",
     "build": "strapi build",
     "strapi": "strapi"
@@ -15,7 +15,8 @@
     "@strapi/strapi": "4.1.0",
     "pg": "^8.6.0",
     "pg-connection-string": "^2.5.0",
-    "strapi-plugin-entity-relationship-chart": "^4.0.2"
+    "strapi-plugin-entity-relationship-chart": "^4.0.2",
+    "strapi-plugin-users-permissions": "^3.6.8"
   },
   "author": {
     "name": "A Strapi developer"
